fix: hero image overflow

--- a/apps/site/src/app/(landing)/Hero.module.scss
+++ b/apps/site/src/app/(landing)/Hero.module.scss
@@ -3,8 +3,8 @@
   position: absolute;
   display: flex;
   justify-content: center;
-  top: 0;
-  bottom: 0;
+  inset: 0;
+  overflow: hidden;
 
   .background {
     position: relative;
